TBR-9809 fix file name not fitting in one line

--- a/styles/bnl/stylesheets/scss/_form.scss
+++ b/styles/bnl/stylesheets/scss/_form.scss
@@ -205,3 +205,16 @@
         }
     }
 }
+
+.custom-file {
+  label {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-right: 80px;
+    padding-top: 10px;
+    &:after {
+      padding-top: 9px;
+    }
+  }
+}
